add moment and display time

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,5 +3,7 @@
 {% block page_content %}
 <div class="page-header">
     <h1>Hello World!</h1>
+    <p>Current time is {{ moment(current_time).format('LLLL') }}.</p>
+    <p>That was {{ moment(current_time).fromNow(refresh=True) }}.</p>
 </div>
 {% endblock %}
