--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,8 +3,14 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Hello {% if name %}{{name}}{% else %}World!{% endif %}</h1>
-    <h2>{% if known %}Nice to see you again.{% else %}Welcome for the first time.{% endif %}</h2>
+    <h1>
+    Hello,
+    {% if current_user.is_authenticated %}
+    {{ current_user.username }}
+    {% else %}
+    Stranger
+    {% endif %}!
+    </h1>
     <p>Current time is {{ moment(current_time).format('LLLL') }}.</p>
     <p>That was {{ moment(current_time).fromNow(refresh=True) }}.</p>
 </div>
