--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,7 +1,29 @@
 {% extends "base.html" %}
 
+{% block title %}User {{ user.username }}{% endblock %}
+
 {% block page_content %}
 <div class="page-header">
-    <h1>Hello, {{ name }}!</h1>
+    <h1>Hello, {{ user.username }}!</h1>
+    {% if user.name or user.location %}
+    <p>
+        {% if user.name %}<strong>Name:</strong> {{ user.name }}{% endif %}
+        {% if user.location %}
+        From <a href="http://maps.google.com/?q={{ user.location }}">
+            {{ user.location }}
+        </a>
+        {% endif %}
+    </p>
+    {% endif %}
+    {% if user.about_me %}
+    <p>{{ user.about_me }}</p>
+    {% endif %}
+    <p>Member since {{ moment(user.member_since).format('L') }}</p>
+    <p>Last seen {{ moment(user.last_seen).fromNow() }}</p>
+    {% if current_user.is_administrator() %}
+    <p>
+        <a href="mailto:{{ user.email }}">Send {{ user.email }} an email</a>
+    </p>
+    {% endif %}
 </div>
 {% endblock %}
