--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -9,7 +9,8 @@
     <p>
         {% if user.name %}<strong>Name:</strong> {{ user.name }}{% endif %}
         {% if user.location %}
-        From <a href="http://maps.google.com/?q={{ user.location }}">
+        <br><strong>Location:</strong>
+        <a href="http://maps.google.com/?q={{ user.location }}">
             {{ user.location }}
         </a>
         {% endif %}
@@ -20,9 +21,16 @@
     {% endif %}
     <p>Member since {{ moment(user.member_since).format('L') }}</p>
     <p>Last seen {{ moment(user.last_seen).fromNow() }}</p>
+    {% if user == current_user %}
+    <p>
+        <a class="btn btn-primary" href="{{ url_for('.edit_profile') }}">Edit Profile</a>
+    </p>
+    {% endif %}
     {% if current_user.is_administrator() %}
     <p>
-        <a href="mailto:{{ user.email }}">Send {{ user.email }} an email</a>
+        <a class="btn btn-primary" href="{{ url_for('.edit_profile_admin', id=user.id) }}">
+            Edit Profile (Admin)
+        </a>
     </p>
     {% endif %}
 </div>
