--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -4,34 +4,37 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Hello, {{ user.username }}!</h1>
-    {% if user.name or user.location %}
-    <p>
-        {% if user.name %}<strong>Name:</strong> {{ user.name }}{% endif %}
-        {% if user.location %}
-        <br><strong>Location:</strong>
-        <a href="http://maps.google.com/?q={{ user.location }}">
-            {{ user.location }}
-        </a>
+    <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}">
+    <div class="profile-header">
+        <h1>Hello, {{ user.username }}!</h1>
+        {% if user.name or user.location %}
+        <p>
+            {% if user.name %}<strong>Name:</strong> {{ user.name }}{% endif %}
+            {% if user.location %}
+            <br><strong>Location:</strong>
+            <a href="http://maps.google.com/?q={{ user.location }}">
+                {{ user.location }}
+            </a>
+            {% endif %}
+        </p>
         {% endif %}
-    </p>
-    {% endif %}
-    {% if user.about_me %}
-    <p>{{ user.about_me }}</p>
-    {% endif %}
-    <p>Member since {{ moment(user.member_since).format('L') }}</p>
-    <p>Last seen {{ moment(user.last_seen).fromNow() }}</p>
-    {% if user == current_user %}
-    <p>
-        <a class="btn btn-primary" href="{{ url_for('.edit_profile') }}">Edit Profile</a>
-    </p>
-    {% endif %}
-    {% if current_user.is_administrator() %}
-    <p>
-        <a class="btn btn-primary" href="{{ url_for('.edit_profile_admin', id=user.id) }}">
-            Edit Profile (Admin)
-        </a>
-    </p>
-    {% endif %}
+        {% if user.about_me %}
+        <p>{{ user.about_me }}</p>
+        {% endif %}
+        <p>Member since {{ moment(user.member_since).format('L') }}</p>
+        <p>Last seen {{ moment(user.last_seen).fromNow() }}</p>
+        {% if user == current_user %}
+        <p>
+            <a class="btn btn-primary" href="{{ url_for('.edit_profile') }}">Edit Profile</a>
+        </p>
+        {% endif %}
+        {% if current_user.is_administrator() %}
+        <p>
+            <a class="btn btn-primary" href="{{ url_for('.edit_profile_admin', id=user.id) }}">
+                Edit Profile (Admin)
+            </a>
+        </p>
+        {% endif %}
+    </div>
 </div>
 {% endblock %}
