--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
+{% import "_macros.html" as macros %}
 
 {% block page_content %}
 <div class="page-header">
@@ -11,8 +12,16 @@
     Stranger
     {% endif %}!
     </h1>
-    <p>Current time is {{ moment(current_time).format('LLLL') }}.</p>
-    <p>That was {{ moment(current_time).fromNow(refresh=True) }}.</p>
 </div>
-{{ wtf.quick_form(form) }}
+<div>
+    {% if current_user.can(Permission.WRITE) %}
+    {{ wtf.quick_form(form) }}
+    {% endif %}
+</div>
+{% include '_posts.html' %}
+{% if pagination %}
+<div class="pagination">
+    {{ macros.pagination_widget(pagination, '.index') }}
+</div>
+{% endif %}
 {% endblock %}
