--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% import "_macros.html" as macros %}
 
 {% block title %}User {{ user.username }}{% endblock %}
 
@@ -36,5 +37,12 @@
         </p>
         {% endif %}
     </div>
+    <h3>Posts</h3>
+    {% include '_posts.html' %}
+    {% if pagination %}
+    <div class="pagination">
+        {{ macros.pagination_widget(pagination, '.user', username=user.username) }}
+    </div>
+    {% endif %}
 </div>
 {% endblock %}
